[gd_scene load_steps=11 format=3 uid="uid://dd66ys3wrrria"]

[ext_resource type="Script" path="res://ship/projectile/projectile.gd" id="1_jsqyn"]
[ext_resource type="Texture2D" uid="uid://01d1d16iqw3l" path="res://ship/ship/ship_cannon/ship_cannon_frames.png" id="2_rrhf2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5j4ox"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g82iq"]
atlas = ExtResource("2_rrhf2")
region = Rect2(100, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc5of"]
atlas = ExtResource("2_rrhf2")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yumo"]
atlas = ExtResource("2_rrhf2")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2oqq"]
atlas = ExtResource("2_rrhf2")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_y80as"]
atlas = ExtResource("2_rrhf2")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_oibcp"]
atlas = ExtResource("2_rrhf2")
region = Rect2(50, 100, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ev32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g82iq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc5of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yumo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2oqq")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y80as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oibcp")
}],
"loop": false,
"name": &"splash",
"speed": 5.0
}]

[node name="Projectile" type="Node2D"]
script = ExtResource("1_jsqyn")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5j4ox")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_6ev32")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
